--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                                     </div>
                                     <h2 class="hero__entry-title">
                                         <a href="single-standard.html">
-                                            Understanding and Using Negative Space.
+                                           Laka sana👌
                                         </a>
                                     </h2>
                                     <p class="hero__entry-desc">
